--- a/lite/res/values/strings.xml
+++ b/lite/res/values/strings.xml
@@ -21,6 +21,7 @@
 	<string name="action_sort_ratio">Ratio</string>
 	<string name="action_filter">Filter list</string>
 	<string name="action_settings">Settings</string>
+	<string name="action_help">Help</string>
 	<string name="action_start">Start</string>
 	<string name="action_stop">Stop</string>
 	<string name="action_resume">Resume</string>
@@ -36,6 +37,7 @@
 	<string name="action_priority_high">High</string>
 	<string name="action_remoteplay">Remote play in VLC</string>
 	<string name="action_download">Download using (S)FTP</string>
+	<string name="action_removesettings">Remove settings</string>
 	
 	<string name="navigation_servers">SERVERS</string>
 	<string name="navigation_status">STATUS</string>
@@ -47,6 +49,7 @@
 	<string name="navigation_status_onlyinactive">Inactive</string>
 	<string name="navigation_emptytorrents">Connected, but no torrent are active within the current filter</string>
 	<string name="navigation_emptydetails">Select a torrent to view its details</string>
+	<string name="navigation_nosettings">Transdroid allows you to monitor and manage the torrent client you run at home or on your seedbox. Setting things up can be a bit tricky, but we offer step-by-step guides and promise it\'ll be worth it!</string>
 	
 	<string name="status_waiting">Waiting to check&#8230;</string>
 	<string name="status_checking">Verifying local data&#8230;</string>
@@ -54,7 +57,7 @@
 	<string name="status_error">Error&#8230;</string>
 	<string name="status_size1">%1$s OF %2$s (%3$s)</string>
 	<string name="status_size2">%1$s, UPLOADED %2$s</string>
-	<string name="status_sincedate">SINCE $s</string>
+	<string name="status_sincedate">SINCE $1%s</string>
 	<string name="status_eta">~ %1$s</string>
 	<string name="status_etalong">ETA %1$s</string>
 	<string name="status_unknowneta">UNKNOWN ETA</string>
@@ -145,16 +148,18 @@
 	<string name="pref_notifyvibrate">Vibrate</string>
 	<string name="pref_notifyled">LED colour</string>
 	<string name="pref_notifyled_info">If supported by your device</string>
-	<string name="pref_awdnotify">Support AWD notifications</string>
-	<string name="pref_awdnotify_info">Show torrent counter in ADW Launcher</string>
+	<string name="pref_adw">Support AWD notifications</string>
+	<string name="pref_adw_info">Show torrent counter in ADW Launcher</string>
 	
-	<string name="pref_system">About Transdroid</string>
+	<string name="pref_system">System</string>
 	<string name="pref_checkupdates">Check for updates</string>
 	<string name="pref_checkupdates_info">Check transdroidorg for latest app version</string>
 	<string name="pref_import">Import settings</string>
 	<string name="pref_export">Export settings</string>
 	<string name="pref_sendlog">Send error log</string>
 	<string name="pref_sendlog_info">Get support or report a bug</string>
+	<string name="pref_installhelp">View install guides</string>
+	<string name="pref_changelog">Recent changes</string>
 	<string name="pref_about">About</string>
 	
 	<string name="error_httperror">Error during communication; check your connection</string>
