--- a/lite/res/values/strings.xml
+++ b/lite/res/values/strings.xml
@@ -84,6 +84,20 @@
 	<string name="labels_newlabel">New label</string>
 	<string name="labels_no_support">Setting a label is not supported by your client</string>
 	
+	<string name="result_added">Torrent added (refreshing)</string>
+	<string name="result_removed">%1$s removed</string>
+	<string name="result_removed_with_data">%1$s removed and data deleted</string>
+	<string name="result_resumed">%1$s resumed (refreshing)</string>
+	<string name="result_stopped">%1$s stopped</string>
+	<string name="result_started">%1$s started (refreshing)</string>
+	<string name="result_paused">%1$s paused</string>
+	<string name="result_paused_all">Torrents paused</string>
+	<string name="result_resumed_all">Torrents resumed (refreshing)</string>
+	<string name="result_stopped_all">Torrents stopped</string>
+	<string name="result_started_all">Torrents started (refreshing)</string>
+	<string name="result_trackersupdated">Trackers updated</string>
+	<string name="result_locationset">Torrent moved to \'%1$s\'</string>
+	
 	<string name="search_torrentsearch">Torrent search</string>
 	<string name="search_hint">Search for torrents</string>
 	<string name="search_"></string>
