--- a/lite/res/values/strings.xml
+++ b/lite/res/values/strings.xml
@@ -23,6 +23,8 @@
 	<string name="action_settings">Settings</string>
 	<string name="action_help">Help</string>
 	<string name="action_start">Start</string>
+	<string name="action_start_default">Normal start</string>
+	<string name="action_start_forced">Force start</string>
 	<string name="action_stop">Stop</string>
 	<string name="action_resume">Resume</string>
 	<string name="action_pause">Pause</string>
@@ -39,6 +41,9 @@
 	<string name="action_download">Download using (S)FTP</string>
 	<string name="action_removesettings">Remove settings</string>
 	
+	<string name="navigation_nosettings">Transdroid allows you to monitor and manage the torrent client you run at home or on your seedbox. Setting things up can be a bit tricky, but we offer step-by-step guides and promise it\'ll be worth it!</string>
+	<string name="navigation_emptytorrents">Connected, but no torrent are active within the current filter</string>
+	<string name="navigation_emptydetails">Select a torrent to view its details</string>
 	<string name="navigation_servers">SERVERS</string>
 	<string name="navigation_status">STATUS</string>
 	<string name="navigation_labels">LABELS</string>
@@ -47,10 +52,8 @@
 	<string name="navigation_status_onlyup">Uploading</string>
 	<string name="navigation_status_onlyactive">Active</string>
 	<string name="navigation_status_onlyinactive">Inactive</string>
-	<string name="navigation_emptytorrents">Connected, but no torrent are active within the current filter</string>
-	<string name="navigation_emptydetails">Select a torrent to view its details</string>
-	<string name="navigation_nosettings">Transdroid allows you to monitor and manage the torrent client you run at home or on your seedbox. Setting things up can be a bit tricky, but we offer step-by-step guides and promise it\'ll be worth it!</string>
 	
+	<string name="status_status">Status: %1%s</string>
 	<string name="status_waiting">Waiting to check&#8230;</string>
 	<string name="status_checking">Verifying local data&#8230;</string>
 	<string name="status_waitingtodl">Waiting to download %s</string>
@@ -96,6 +99,7 @@
 	<string name="result_stopped_all">Torrents stopped</string>
 	<string name="result_started_all">Torrents started (refreshing)</string>
 	<string name="result_trackersupdated">Trackers updated</string>
+	<string name="result_labelset">Label set to \'%1$s\'</string>
 	<string name="result_locationset">Torrent moved to \'%1$s\'</string>
 	
 	<string name="search_torrentsearch">Torrent search</string>
