--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -103,7 +103,8 @@
 	
 	<string name="search_torrentsearch">Torrent search</string>
 	<string name="search_hint">Search for torrents</string>
-	<string name="search_barcodescannernotfound">The Barcode Scanner could not be found. Would you like to install it from the Android Market?</string>
+	<string name="search_barcodescannernotfound">The Barcode Scanner could not be found. Would you like to install it from the Play Store?</string>
+	<string name="search_filemanagernotfound">No compatible file manager could not be found. Would you like to install IO File Manager from the Play Store?</string>
 	
 	<string name="pref_servers">Servers</string>
 	<string name="pref_addserver">Add new server</string>
