--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -73,8 +73,8 @@
 	<string name="status_unknowneta">UNKNOWN ETA</string>
 	<string name="status_ratio">RATIO %1$s</string>
 	<string name="status_peers">%1$s OF %2$s PEERS</string>
-	<string name="status_speed_up">↑ %1$s</string>
-	<string name="status_speed_down">↓ %1$s</string>
+	<string name="status_speed_up" translatable="false">↑ %1$s</string>
+	<string name="status_speed_down" translatable="false">↓ %1$s</string>
 	<string name="status_downloading">Downloading</string>
 	<string name="status_seeding">Seeding</string>
 	<string name="status_paused">Paused</string>
