--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -118,6 +118,9 @@
 	<string name="search_barcodescannernotfound">The Barcode Scanner could not be found. Would you like to install it from the Play Store?</string>
 	<string name="search_filemanagernotfound">No compatible file manager could not be found. Would you like to install IO File Manager from the Play Store?</string>
 	
+	<string name="rss_nosettings">You have not defined any RSS feeds yet to monitor. Torrent-specific RSS feeds keep you up to date with new releases and you are notified of new items.</string>
+	<string name="rss_empty">The RSS feed is not available or it contains no items</string>
+	
 	<string name="pref_servers">Servers</string>
 	<string name="pref_addserver">Add new server</string>
 	<string name="pref_searchsites">Search sites</string>
