Added a dummy client adapter for fast UI testing.

--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -219,6 +219,7 @@
         <item>Buffalo NAS -1.31</item>
         <item>Deluge 1.2+</item>
         <item>DLink Router BT</item>
+        <item>Dummy</item>
         <item>Ktorrent</item>
         <item>qBittorrent</item>
         <item>rTorrent</item>
@@ -234,6 +235,7 @@
         <item>daemon_buffalonas</item>
         <item>daemon_deluge</item>
         <item>daemon_dlinkrouterbt</item>
+        <item>daemon_dummy</item>
         <item>daemon_ktorrent</item>
         <item>daemon_qbittorrent</item>
         <item>daemon_rtorrent</item>
