Sort files in details screen using natural order.

--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -78,7 +78,8 @@
 	<string name="status_ratio">RATIO %1$s</string>
 	<string name="status_peers">%1$s OF %2$s PEERS</string>
 	<string name="status_speed_up" translatable="false">↑ %1$s</string>
-	<string name="status_speed_down" translatable="false">%1$s ↓</string>
+	<string name="status_speed_down" translatable="false">↓ %1$s</string>
+	<string name="status_speed_down_details" translatable="false">%1$s ↓</string>
 	<string name="status_downloading">Downloading</string>
 	<string name="status_seeding">Seeding</string>
 	<string name="status_paused">Paused</string>
