--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -100,6 +100,10 @@
 	<string name="status_maxspeed_unit">KB/S</string>
 	<string name="status_maxspeed_reset">Reset</string>
 	<string name="status_update">Update</string>
+	<string name="status_label_pick">PICK A LABEL</string>
+	<string name="status_label_new">NEW LABEL</string>
+	<string name="status_label_remove">Remove label</string>
+	<string name="status_label_hint">E.g. movies or linux</string>
 	
 	<string name="labels_showall">All labels</string>
 	<string name="labels_unlabeled">Unlabeled</string>
@@ -313,6 +317,7 @@
 	<string name="error_file_not_found">The settings file could not be found</string>
 	<string name="error_cant_write_settings_file">Can\'t write to the settings file</string>
 	<string name="error_notanumber">Please enter a positive number</string>
+	<string name="error_notalabel">Please enter a valid label or pick from the list</string>
 	
 	<string name="system_name" translatable="false">Transdroid</string>
 	<string name="system_developer" translatable="false">\u00A9 Eric Kok, 2312 development</string>
